# win32-http-server-oauth2

./: CMakeLists.txt
src/: .clang-format  http_server.cpp  http_server.h  main.cpp
